# events-face

./: .env.example  pyproject.toml
src/: urls.py
src/core/: redis_client.py  settings.py
src/events/: admin.py  models.py  serializers.py  urls.py  views.py
src/events/management/commands/: generate_dummy_data.py
src/events/migrations/: 0001_initial.py  0002_alter_event_options.py
src/users/: authentication.py  serializers.py  urls.py  views.py
